h2 added and p added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     </head>
     <body>
         <h1>HiWorld</h1>
+        <h2>haiioo</h2>
+        <p>hai my dear friends</p>
     </body>
 
 </html>
